# timestream-query

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
src/: QueryUtil.py
src/timesteam_query/: __init__.py
src/timestream_query/: QueryUtil.py  __init__.py
src/timestream_query.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
