[metadata]
name = timestream-query
version = 1.0.0
author = Woojin Kang
url = https://github.com/James-Ansley/moodle-toml
description = A small transpiler that converts human-readable text and TOML file formats representing Moodle questions to Moodle XML
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT License
classifiers =
    Development Status :: 1 - Planning
    Topic :: Utilities
    Intended Audience :: Education
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >= 3.10
package_dir =
    = src
packages = find:
install_requires =
    tomli~=2.0.1
    Markdown~=3.3.7
    Jinja2~=3.1.2
    beautifulsoup4~=4.11.1

[options.package_data]
* =
    templates/*

[options.packages.find]
where = src
