[metadata]
name = timestream-query
version = 1.0.0
author = Woojin Kang
url = https://github.com/wjsoft08/timestream-query
description = A small utility class to query timestream to object array quickly
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT License
classifiers =
    Development Status :: 1 - Planning
    Topic :: Utilities
    Intended Audience :: Education
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >= 3.10
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
